<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ServerCraft</string>
    <string name="server_version_error">Server is running an incompatible version</string>
    <string name="delete_caution">Are you sure that you want to remove this server?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="server_name">Server Name</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="add_server">Add Server</string>
    <string name="context_copy">Copy Server Address</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>
    <string name="edit">Edit</string>
    <string name="edit_server">Save Server</string>
    <string name="no_servers">No Servers Found</string>
    <string name="no_server_message">No Servers were found. Would you like to add one now?</string>
    <string name="cache_corrupt">Corrupt Server Cache</string>
    <string name="cache_corrupt_message">Your server cache appears to be corrupt, a new one will be created</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="favorite">Favorite</string>
    <string name="status_bar">Status Bar</string>
    <string name="minecraft_server">Minecraft server</string>
    <string name="server_ip_url">Server IP/URL</string>
    <string name="default_port">25565</string>
</resources>
